--- a/hotel-cities-report.html
+++ b/hotel-cities-report.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تقرير%20المدن%20الفندقية.html">Arabic</a>
+                            <a class="lang-text" href="تقرير%20مدُنى%20الفندقيه.html">Arabic</a>
                         </div>
 
                     </div>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تقرير%20المدن%20الفندقية.html">Arabic</a>
+                                <a class="lang-text" href="تقرير%20مدُنى%20الفندقيه.html">Arabic</a>
                             </div>
 
                         </div>
