--- a/sign-in.html
+++ b/sign-in.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تسجيل%20الدخول.html">Arabic</a>
+                            <a class="lang-text" href="تسجيل%20دخول%20حساب%20فندقى.html">Arabic</a>
                         </div>
 
                     </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تسجيل%20الدخول.html">Arabic</a>
+                                <a class="lang-text" href="تسجيل%20دخول%20حساب%20فندقى.html">Arabic</a>
                             </div>
 
                         </div>
