--- a/أقسام الفندق.html
+++ b/أقسام الفندق.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="من نحن.html">Arabic</a>
+                            <a class="lang-text" href="أقسام%20الفندق.html">Arabic</a>
                         </div>
 
                     </div>
@@ -59,7 +59,7 @@
                     <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="تسجيل%20الدخول.html">
+                    <a  href="تسجيل%20دخول%20حساب%20فندقى.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="من نحن.html">Arabic</a>
+                                <a class="lang-text" href="أقسام%20الفندق.html">Arabic</a>
                             </div>
 
                         </div>
@@ -149,7 +149,7 @@
                 <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20دخول%20حساب%20فندقى.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -163,7 +163,7 @@
             <hr>
 
             <li>
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
 
 
                     بياناتى
@@ -173,7 +173,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير%20بنزلاء%20فندقى.html">
 
 
                     تقرير بنزلاء فندقى
@@ -184,7 +184,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20المدن%20الفندقية.html">
+                <a href="تقرير%20مدُنى%20الفندقيه.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -194,7 +194,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20الغرف.html">
+                <a href="تقرير%20الغرف%20الفندقيه.html">
 
 
                     تقرير الغرف الفندقيه
@@ -215,7 +215,7 @@
 
             </li>
             <li>
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
 
 
                     طلب الأرباح
@@ -227,7 +227,7 @@
 
 
             <li>
-                <a href="التزام%20العمل.html">
+                <a href="ألتزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -254,7 +254,7 @@
             </li>
 
             <li>
-                <a href="تغيير%20الباسورد.html ">
+                <a href="تغيير%20كلمة%20السر.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -310,7 +310,7 @@
         </div>
         <div class="section-row">
             <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         بياناتى
@@ -355,7 +355,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         طلب الأرباح
