--- a/ألتزام العمل.html
+++ b/ألتزام العمل.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="التزام العمل.html">Arabic</a>
+                            <a class="lang-text" href="ألتزام العمل.html">Arabic</a>
                         </div>
 
                     </div>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="التزام العمل.html">Arabic</a>
+                                <a class="lang-text" href="ألتزام العمل.html">Arabic</a>
                             </div>
 
                         </div>
@@ -155,7 +155,7 @@
                 <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20دخول%20حساب%20فندقى.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -179,7 +179,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير%20بنزلاء%20فندقى.html">
 
 
                     تقرير بنزلاء فندقى
@@ -190,7 +190,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20المدن%20الفندقية.html">
+                <a href="تقرير%20مدُنى%20الفندقيه.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -200,7 +200,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20الغرف.html">
+                <a href="تقرير%20الغرف%20الفندقيه.html">
 
 
                     تقرير الغرف الفندقيه
@@ -233,7 +233,7 @@
 
 
             <li>
-                <a href="التزام العمل.html">
+                <a href="ألتزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -260,14 +260,14 @@
             </li>
 
             <li>
-                <a href="تغيير%20الباسورد.html ">
+                <a href="تغيير%20كلمة%20السر.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
 
 
                     شاركنا فكرتك
