--- a/تسجيل نزيل جديد.html
+++ b/تسجيل نزيل جديد.html
@@ -57,7 +57,7 @@
                     <a  href="تسجيل نزيل جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="تسجيل%20الدخول.html">
+                    <a  href="تسجيل%20دخول%20حساب%20فندقى.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -148,7 +148,7 @@
                 <a  href="تسجيل نزيل جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20دخول%20حساب%20فندقى.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -163,7 +163,7 @@
             <hr>
 
             <li>
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
 
 
                     بياناتى
@@ -173,7 +173,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير%20بنزلاء%20فندقى.html">
 
 
                     تقرير بنزلاء فندقى
@@ -184,7 +184,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20المدن%20الفندقية.html">
+                <a href="تقرير%20مدُنى%20الفندقيه.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -194,7 +194,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20الغرف.html">
+                <a href="تقرير%20الغرف%20الفندقيه.html">
 
 
                     تقرير الغرف الفندقيه
@@ -215,7 +215,7 @@
 
             </li>
             <li>
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
 
 
                     طلب الأرباح
@@ -227,7 +227,7 @@
 
 
             <li>
-                <a href="التزام%20العمل.html">
+                <a href="ألتزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -254,14 +254,14 @@
             </li>
 
             <li>
-                <a href="تغيير%20الباسورد.html ">
+                <a href="تغيير%20كلمة%20السر.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
 
 
                     شاركنا فكرتك
@@ -310,7 +310,7 @@
                 <input type="text" class="form-control" id="number" placeholder="أدخل رقم فندق الشريك الذى دعاك  ">
             </div>
 
-            <a href="فورم%20تسجيل%20النزيل%20الجديد.html" class="submit" >الخطوه التاليه</a>
+            <a href="تسجيل%20نزيل%20جديد%202.html" class="submit" >الخطوه التاليه</a>
         </form>
     </div>
 </section>
