--- a/رسالة نجاح التسجيل.html
+++ b/رسالة نجاح التسجيل.html
@@ -64,7 +64,7 @@
         </div>
 
 
-        <a href="من%20نحن.html" class="submit " >
+        <a href="أقسام%20الفندق.html" class="submit " >
             الذهاب لأقسام الفندق
             <i class="fas fa-chevron-right"></i>
         </a>
