--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="فورم%20تسجيل%20النزيل%20الجديد.html">Arabic</a>
+                            <a class="lang-text" href="تسجيل%20نزيل%20جديد%202.html">Arabic</a>
                         </div>
 
                     </div>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="فورم%20تسجيل%20النزيل%20الجديد.html">Arabic</a>
+                                <a class="lang-text" href="تسجيل%20نزيل%20جديد%202.html">Arabic</a>
                             </div>
 
                         </div>
