--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="الأرباح.html">Arabic</a>
+                            <a class="lang-text" href="طلب%20الأرباح.html">Arabic</a>
                         </div>
 
                     </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="الأرباح.html">Arabic</a>
+                                <a class="lang-text" href="طلب%20الأرباح.html">Arabic</a>
                             </div>
 
                         </div>
