--- a/بياناتى.html
+++ b/بياناتى.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="بيانات.html">Arabic</a>
+                            <a class="lang-text" href="بياناتى.html">Arabic</a>
                         </div>
 
                     </div>
@@ -59,7 +59,7 @@
                     <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="تسجيل%20الدخول.html">
+                    <a  href="تسجيل%20دخول%20حساب%20فندقى.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="بيانات.html">Arabic</a>
+                                <a class="lang-text" href="بياناتى.html">Arabic</a>
                             </div>
 
                         </div>
@@ -151,7 +151,7 @@
                 <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20دخول%20حساب%20فندقى.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -165,7 +165,7 @@
             <hr>
 
             <li>
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
 
 
                     بياناتى
@@ -175,7 +175,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير%20بنزلاء%20فندقى.html">
 
 
                     تقرير بنزلاء فندقى
@@ -186,7 +186,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20المدن%20الفندقية.html">
+                <a href="تقرير%20مدُنى%20الفندقيه.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -196,7 +196,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20الغرف.html">
+                <a href="تقرير%20الغرف%20الفندقيه.html">
 
 
                     تقرير الغرف الفندقيه
@@ -217,7 +217,7 @@
 
             </li>
             <li>
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
 
 
                     طلب الأرباح
@@ -229,7 +229,7 @@
 
 
             <li>
-                <a href="التزام%20العمل.html">
+                <a href="ألتزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -256,14 +256,14 @@
             </li>
 
             <li>
-                <a href="تغيير%20الباسورد.html ">
+                <a href="تغيير%20كلمة%20السر.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
 
 
                     شاركنا فكرتك
@@ -288,6 +288,7 @@
 
         </ul>
     </nav>
+
 
 
 
