--- a/طلب الأرباح.html
+++ b/طلب الأرباح.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="الأرباح.html">Arabic</a>
+                            <a class="lang-text" href="طلب الأرباح.html">Arabic</a>
                         </div>
 
                     </div>
@@ -59,7 +59,7 @@
                     <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="تسجيل%20الدخول.html">
+                    <a  href="تسجيل%20دخول%20حساب%20فندقى.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="الأرباح.html">Arabic</a>
+                                <a class="lang-text" href="طلب الأرباح.html">Arabic</a>
                             </div>
 
                         </div>
@@ -150,7 +150,7 @@
                 <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20دخول%20حساب%20فندقى.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير%20بنزلاء%20فندقى.html">
 
 
                     تقرير بنزلاء فندقى
@@ -185,7 +185,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20المدن%20الفندقية.html">
+                <a href="تقرير%20مدُنى%20الفندقيه.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -195,7 +195,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20الغرف.html">
+                <a href="تقرير%20الغرف%20الفندقيه.html">
 
 
                     تقرير الغرف الفندقيه
@@ -216,7 +216,7 @@
 
             </li>
             <li>
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
 
 
                     طلب الأرباح
@@ -228,7 +228,7 @@
 
 
             <li>
-                <a href="التزام%20العمل.html">
+                <a href="ألتزام%20العمل.html">
 
 
                     ألتزام العمل
@@ -255,14 +255,14 @@
             </li>
 
             <li>
-                <a href="تغيير%20الباسورد.html ">
+                <a href="تغيير%20كلمة%20السر.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea ">
 
 
                     شاركنا فكرتك
@@ -297,7 +297,7 @@
    <div id="withdraw-profit">
        <div class="container">
            <div class="section-back">
-               <a href="من%20نحن.html">الرجوع لأقسام الفندق </a>
+               <a href="أقسام%20الفندق.html">الرجوع لأقسام الفندق </a>
            </div>
        </div>
        <div class="container">
