--- a/أقسام الفندق.html
+++ b/أقسام الفندق.html
@@ -320,7 +320,7 @@
                 </a>
             </div>
             <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير%20بنزلاء%20فندقى.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير بنزلاء فندقى
@@ -329,7 +329,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <a href="تقرير%20المدن%20الفندقية.html">
+                <a href="تقرير%20مدُنى%20الفندقيه.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير مُدنى الفندقيه
@@ -337,7 +337,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                <a href="تقرير%20الغرف.html">
+                <a href="تقرير%20الغرف%20الفندقيه.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير الغرف الفندقيه
@@ -363,7 +363,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="التزام%20العمل.html">
+                <a href="ألتزام%20العمل.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         ألتزام العمل
@@ -391,7 +391,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="تغيير%20الباسورد.html">
+                <a href="تغيير%20كلمة%20السر.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تغيير كلمة السر للفندق
