--- a/ألتزام العمل.html
+++ b/ألتزام العمل.html
@@ -304,7 +304,7 @@
   <div id="business-rtl">
       <div class="container-rtl">
           <div class="section-back">
-              <a href="من%20نحن.html">
+              <a href="أقسام%20الفندق.html">
                   الرجوع لأقسام الفندق
               </a>
           </div>
