--- a/بياناتى.html
+++ b/بياناتى.html
@@ -301,7 +301,7 @@
     -->
     <div class="container-rtl" id="container-rtl">
         <div class="section-back wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <a href="من%20نحن.html">
+            <a href="أقسام%20الفندق.html">
                 الرجوع لأقسام الفندق
             </a>
         </div>
