--- a/تسجيل دخول حساب فندقى.html
+++ b/تسجيل دخول حساب فندقى.html
@@ -312,9 +312,9 @@
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder=" أدخل كلمة السر لفندقك ">
             </div>
-            <a href="من%20نحن.html">
+            <a href="تسجيل%20نزيل%20جديد%202.html">
            <div class="button">
-               <a class="submit " href="من%20نحن.html">دخول حساب فندقى
+               <a class="submit " href="تسجيل%20نزيل%20جديد%202.html">دخول حساب فندقى
 
                    <i class="fas fa-chevron-right"></i>
                </a>
