--- a/ألتزام العمل.html
+++ b/ألتزام العمل.html
@@ -65,7 +65,7 @@
                     <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="تسجيل%20الدخول.html">
+                    <a  href="تسجيل%20دخول%20حساب%20فندقى.html">
                         دخول حساب فندقى
                     </a>
                 </div>
