--- a/تسجيل دخول حساب فندقى.html
+++ b/تسجيل دخول حساب فندقى.html
@@ -314,7 +314,7 @@
             </div>
             <a href="تسجيل%20نزيل%20جديد%202.html">
            <div class="button">
-               <a class="submit " href="تسجيل%20نزيل%20جديد%202.html">دخول حساب فندقى
+               <a class="submit " href="أقسام%20الفندق.html">دخول حساب فندقى
 
                    <i class="fas fa-chevron-right"></i>
                </a>
